--- a/rellic/Version/CMakeLists.txt
+++ b/rellic/Version/CMakeLists.txt
@@ -7,10 +7,10 @@
 # the source code for watching a git repository.
 set(PRE_CONFIGURE_FILE "Version.cpp.in")
 set(POST_CONFIGURE_FILE "${CMAKE_CURRENT_BINARY_DIR}/Version.cpp")
-set(GIT_WORKING_DIR "${RELLIC_SOURCE_DIR}")
-include("${RELLIC_SOURCE_DIR}/cmake/git_watcher.cmake")
+set(GIT_WORKING_DIR "${PROJECT_SOURCE_DIR}")
+include("${PROJECT_SOURCE_DIR}/cmake/git_watcher.cmake")
 
 # Create a library out of the compiled post-configure file.
 add_library(RellicVersion ${POST_CONFIGURE_FILE})
-target_include_directories(RellicVersion PUBLIC ${RELLIC_SOURCE_DIR})
+target_include_directories(RellicVersion PUBLIC ${PROJECT_SOURCE_DIR})
 add_dependencies(RellicVersion check_git_${PROJECT_NAME})
