--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0 submodules: true
+          fetch-depth: 0
+          submodules: true
       - name: Install utility tools
         shell: bash
         run: |
