--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
 
       - name: Test the DEB package
         run: |
-          rellic-decomp-${{ matrix.llvm }}.0 --help
+          rellic-decomp-${{ matrix.llvm }}.0 --version
 
       - name: Run Integration Tests (AnghaBench 1K)
         shell: bash
