--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
         with:
           fetch-depth: 0
           submodules: true
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
       - name: Install utility tools
         shell: bash
         run: |
