Run AnghaBench 1K test to gate merges (#148)
* Create an angha ignore list, add angha1k (with ignore list) to regular CI builds
* gate angha1k ci workflow by llvm 11

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,8 @@ jobs:
         run: |
           # TODO some of these should probably live in the Docker build image
           apt-get update
-          apt-get install -y pixz xz-utils make rpm
+          apt-get install -y pixz xz-utils make rpm python3.8
+          update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 100
 
       - name: Build with build script
         shell: bash
@@ -69,6 +70,22 @@ jobs:
           echo ::set-output name=DEB_PACKAGE_PATH::rellic-build/$(ls *.deb)
           echo ::set-output name=RPM_PACKAGE_PATH::rellic-build/$(ls *.rpm)
           echo ::set-output name=TGZ_PACKAGE_PATH::rellic-build/$(ls *.tar.gz)
+
+      - name: Install the DEB package
+        run: |
+          dpkg -i ${{ steps.package_names.outputs.DEB_PACKAGE_PATH }}
+
+      - name: Test the DEB package
+        run: |
+          rellic-decomp-${{ matrix.llvm }}.0 --version
+
+      - name: Run Integration Tests (AnghaBench 1K, LLVM 11)
+        if: ${{ matrix.llvm == '11' }}
+        shell: bash
+        run: |
+          python3 -m pip install -r libraries/lifting-tools-ci/requirements.txt
+          scripts/test-angha-1k.sh \
+            --rellic-cmd "rellic-decomp-${{ matrix.llvm }}.0"
 
       - name: Store the DEB package
         uses: actions/upload-artifact@v1
