--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,7 @@ jobs:
         if: ${{ matrix.llvm == '11' }}
         shell: bash
         run: |
+          apt-get install -y clang-${{ matrix.llvm }}
           python3 -m pip install -r libraries/lifting-tools-ci/requirements.txt
           scripts/test-angha-1k.sh \
             --rellic-cmd "rellic-decomp-${{ matrix.llvm }}.0"
