--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,9 +80,10 @@ jobs:
           rellic-decomp-${{ matrix.llvm }}.0 --version
 
       - name: Run Integration Tests (AnghaBench 1K, LLVM 11)
-        if: ${{ matrix.llvm == '11' }}
+        if: ${{ matrix.llvm == '11' && matrix.ubuntu == '20.04' }}
         shell: bash
         run: |
+          apt-get install -y clang-${{ matrix.llvm }}
           python3 -m pip install -r libraries/lifting-tools-ci/requirements.txt
           scripts/test-angha-1k.sh \
             --rellic-cmd "rellic-decomp-${{ matrix.llvm }}.0"
