--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
-[submodule "libraries/doctest/src"]
-	path = libraries/doctest/src
+[submodule "external/doctest/src"]
+	path = external/doctest/src
 	url = https://github.com/onqtam/doctest.git
-[submodule "libraries/lifting-tool-ci"]
-	path = libraries/lifting-tools-ci
+[submodule "external/lifting-tools-ci"]
+	path = external/lifting-tools-ci
 	url = https://github.com/lifting-bits/lifting-tools-ci.git
 	branch = master
