Restore local variable names from debug metadata
Performs a first pass against the whole module to accumulate all
the local variables which have been annotated with a name via
`@llvm.dbg.declare`

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(${PROJECT_NAME} STATIC
   AST/CXXToCDecl.cpp
   AST/InferenceRule.cpp
   AST/DeadStmtElim.cpp
+  AST/DebugInfoVisitor.cpp
   AST/CondBasedRefine.cpp
   AST/ExprCombine.cpp
   AST/GenerateAST.cpp
