Refactor field renaming into separate pass

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library(${PROJECT_NAME} STATIC
   AST/Z3CondSimplify.cpp
   AST/Z3ConvVisitor.cpp
   AST/ReachBasedRefine.cpp
+  AST/StructFieldRenamer.cpp
   
   BC/Util.cpp
   BC/Compat/Value.cpp
