Use debug metadata in LLVM bitcode to infer names (#180)
* Restore local variable names from debug metadata

Performs a first pass against the whole module to accumulate all
the local variables which have been annotated with a name via
`@llvm.dbg.declare`

* Fix formatting, update clang-format settings

* Add conflicting names test
Add test where multiple local variables (originally declared in
various scope levels) have the same name associated via debug info

* Collect scope information about instructions and local variables

* Implements local variable renaming using a separate pass

* Rename existing declaration instead of substituting it

* Avoid lexical scoping issues by appending automatic id to names
In the future a proper solution to recovering lexical scopes
should be put in place

* Fix conflicting_names.c test
TODO: fix type name inference

* [WIP] Recover signedness and field names

* Redundant ternary is redundant

* Invert test assertions to output errors correctly

* Use debug info when testing

* Restore old test

* Fix debug info for arrays, pointers and vectors
Also provides debug info for function arguments

* Properly handle chains of typedefs

* Refactor field renaming into separate pass

* Only append automatic name in case of clashes

* Fix local renaming
Take into account parameter names

* Remove unnecessary includes

* Fix type walking bug

* Fix type walking bugs

* Add conflicting global and local names test

* Fix clashes with global variables

* Add template parameter pack test
Makes sure we don't break parameter packs via renaming

* Address review

* Forgot one method name

* Further refinements

* Rename `DebugInfoVisitor` to `DebugInfoCollector`

* Remove unused include

* Add example regarding DIDerivedType unwrapping

* Invoke `WalkType` on variable declarations

* Ensure tests don't break if no debug data is there

* Add comment in regards to discarding 

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -8,10 +8,12 @@ add_library(${PROJECT_NAME} STATIC
   AST/CXXToCDecl.cpp
   AST/InferenceRule.cpp
   AST/DeadStmtElim.cpp
+  AST/DebugInfoCollector.cpp
   AST/CondBasedRefine.cpp
   AST/ExprCombine.cpp
   AST/GenerateAST.cpp
   AST/IRToASTVisitor.cpp
+  AST/LocalDeclRenamer.cpp
   AST/LoopRefine.cpp
   AST/NestedCondProp.cpp
   AST/NestedScopeCombine.cpp
@@ -19,6 +21,7 @@ add_library(${PROJECT_NAME} STATIC
   AST/Z3CondSimplify.cpp
   AST/Z3ConvVisitor.cpp
   AST/ReachBasedRefine.cpp
+  AST/StructFieldRenamer.cpp
   
   BC/Util.cpp
   BC/Compat/Value.cpp
