--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,3 +165,8 @@ add_test(NAME test_decompile
   COMMAND scripts/decompile.py $<TARGET_FILE:${RELLIC_DECOMP}> tests/tools/decomp/
   WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
 )
+
+add_test(NAME test_layoutgen
+  COMMAND scripts/test-layoutgen.py $<TARGET_FILE:${RELLIC_LAYOUTGEN}> tests/tools/layoutgen/ "${CLANG_PATH}"
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
