Generate function prototypes as well

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library(${PROJECT_NAME} STATIC
   AST/ReachBasedRefine.cpp
   AST/StructFieldRenamer.cpp
   AST/StructGenerator.cpp
+  AST/SubprogramGenerator.cpp
   
   BC/Util.cpp
   BC/Compat/Value.cpp
