--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,8 +1,16 @@
 #
+# Copyright (c) 2020-present, Trail of Bits, Inc.
+# All rights reserved.
+#
+# This source code is licensed in accordance with the terms specified in
+# the LICENSE file found in the root directory of this source tree.
+#
+
+#
 # rellic-decomp
 #
 
-set(RELLIC_DECOMP ${PROJECT_NAME}-decomp-${RELLIC_LLVM_VERSION})
+set(RELLIC_DECOMP ${PROJECT_NAME}-decomp)
 
 add_executable(${RELLIC_DECOMP}
   decomp/Decomp.cpp
@@ -13,13 +21,11 @@ add_project_properties(${RELLIC_DECOMP})
 
 set(RELLIC_DECOMP ${RELLIC_DECOMP} PARENT_SCOPE)
 
-install(TARGETS ${RELLIC_DECOMP} DESTINATION "bin")
-
 #
 # rellic-headergen
 #
 
-set(RELLIC_HEADERGEN ${PROJECT_NAME}-headergen-${RELLIC_LLVM_VERSION})
+set(RELLIC_HEADERGEN ${PROJECT_NAME}-headergen)
 
 add_executable(${RELLIC_HEADERGEN}
   headergen/HeaderGen.cpp
@@ -30,13 +36,25 @@ add_project_properties(${RELLIC_HEADERGEN})
 
 set(RELLIC_HEADERGEN ${RELLIC_HEADERGEN} PARENT_SCOPE)
 
-install(TARGETS ${RELLIC_HEADERGEN} DESTINATION "bin")
+if(RELLIC_ENABLE_INSTALL)
+  
+  install(
+    TARGETS
+      ${RELLIC_DECOMP}
+      ${RELLIC_HEADERGEN}
+    EXPORT
+      "${PROJECT_NAME}Targets"
+    RUNTIME
+      DESTINATION
+        "bin"
+  )
+  
+  #
+  # IDA UI plugin
+  #
+  install(
+    FILES "${CMAKE_CURRENT_SOURCE_DIR}/plugins/ida-rellic.py"
+    DESTINATION "share/rellic"
+  )
 
-#
-# IDA UI plugin
-#
-
-install(
-  FILES "${CMAKE_CURRENT_SOURCE_DIR}/plugins/ida-rellic.py"
-  DESTINATION "share/rellic"
-)
+endif(RELLIC_ENABLE_INSTALL)
