--- a/rellicConfig.cmake.in
+++ b/rellicConfig.cmake.in
@@ -8,5 +8,18 @@
 
 @PACKAGE_INIT@
 
-include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake")
-check_required_components("@PROJECT_NAME@")
+if(NOT TARGET rellic::rellic)
+
+  include(CMakeFindDependencyMacro)
+  find_dependency(gflags)
+  find_dependency(glog)
+  find_dependency(Z3)
+  find_dependency(llvm)
+  find_dependency(Clang)
+
+  # Exported Targets
+  
+  include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake")
+  check_required_components("@PROJECT_NAME@")
+
+endif()
