--- a/lib/Version.cpp.in
+++ b/lib/Version.cpp.in
@@ -23,7 +23,7 @@
 //  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 //  SOFTWARE.
 //
-#include "rellic/Version/Version.h"
+#include "rellic/Version.h"
 
 namespace rellic {
 namespace Version {
